# OWEngine

./: README.txt  astyle-code.bat  astyle-code.sh
OWE/: .classpath  .project  AndroidManifest.xml  OWENative.vcxproj  OWEPackaging.androidproj  build.xml
OWE/jni/: Android.mk  owe.c  owe.h
RTCW4A/: .project  AndroidManifest.xml  project.properties
compiled/binaries/: OWEPackaging.apk  extractfuncs.bat  radiosity_kernel.cl
docs/: changelog.txt
libraries/FBX/: readme.txt
libraries/jpeg-6/: jerror.c  jmemnobs.c  jmorecfg.h
main/botfiles/: botnames.txt  fw_items.c  teamplay.h
src/: astyle-code.bat  astyle-code.sh  astyle-options.ini  wolf.sln  wolf.vcxproj  wolf.vcxproj.filters
src-engine/: CMakeLists.txt
src-engine/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_bspq3.cpp  be_aas_cluster.c  be_aas_cluster.cpp  be_aas_debug.c  be_aas_debug.cpp  be_aas_def.h  be_aas_entity.c  be_aas_entity.cpp  be_aas_file.c  be_aas_file.cpp  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.cpp  be_aas_main.h  be_aas_move.c  be_aas_move.cpp  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.cpp  be_aas_route.c  be_aas_route.cpp  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.cpp  be_aas_routetable.c  be_aas_routetable.cpp  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.cpp  be_aas_sample.h  be_ai_char.c  be_ai_char.cpp  be_ai_char.h  be_ai_chat.c  (+40 more)
src-engine/client/: CMakeLists.txt  cl_cgame.c  cl_cgame.cpp  cl_cin.cpp  cl_console.c  cl_console.cpp  cl_input.cpp  cl_keys.cpp  cl_main.cpp  cl_net_chan.c  cl_net_chan.cpp  cl_parse.c  cl_parse.cpp  cl_scrn.c  cl_scrn.cpp  cl_ui.c  cl_ui.cpp  client.h  keys.h  snd_dma.c  snd_dma.cpp  snd_local.h  snd_mem.c  snd_mem.cpp  snd_mix.c  snd_mix.cpp  snd_public.h
src-engine/cm/: cm_load.cpp  cm_local.h  cm_model.cpp  cm_model.h  cm_patch.cpp  cm_patch.h  cm_public.h  cm_test.cpp  cm_trace.cpp  cm_traceModel.h
src-engine/physicslib/: phyics_main.cpp  physics_collision.cpp  physics_collision.h  physics_debug.cpp  physics_local.h  physics_public.h  physics_tracemodel.cpp
src-engine/platform/macosx/: CGMouseDeltaFix.h  CGMouseDeltaFix.m  CMakeLists.txt  Q3Controller.h  macosx_display.h  macosx_glsmp_mutex.m  macosx_glsmp_null.mm  macosx_glsmp_ports.m  macosx_input.m  macosx_sndcore.m
src-engine/qcommon/: cm_load.c  cm_load.cpp  cm_local.h  cm_patch.c  cm_patch.cpp  cm_polylib.cpp  cm_polylib.h  cm_public.h  cm_test.c  cm_test.cpp  cmd.c  cmd.cpp  common.c  common.cpp  cvar.c  cvar.cpp  dl_local.h  dl_main.cpp  dl_main_curl.cpp  dl_main_stubs.cpp  dl_public.h  files.c  files.cpp  huffman.c  huffman.cpp  md4.cpp  msg.c  msg.cpp  net_chan.c  net_chan.cpp  q_math.c  q_math.cpp  q_shared.cpp  q_shared.h  qcommon.h  qfiles.h  surfaceflags.h  unzip.c  unzip.cpp  unzip.h  (+6 more)
src-engine/renderer/: anorms256.h  glext.h  qgl.h  qgl_linked.h  r_animation.cpp  r_backend.cpp  r_bsp.cpp  r_cmds.cpp  r_cmesh.cpp  r_curve.cpp  r_flares.cpp  r_font.cpp  r_image.cpp  r_init.cpp  r_light.cpp  r_local.h  r_main.cpp  r_marks.cpp  r_mesh.cpp  r_model.cpp  r_model_md4mesh.cpp  r_noise.cpp  r_public.h  r_renderProgs.cpp  r_scene.cpp  r_shade.cpp  r_shade_calc.cpp  r_shader.cpp  r_shadows.cpp  r_sky.cpp  r_surface.cpp  r_types.h  r_world.cpp  tr_animation.cpp  tr_backend.cpp  tr_bsp.cpp  tr_cmds.c  tr_cmds.cpp  tr_cmesh.c  tr_cmesh.cpp  (+35 more)
src-engine/server/: server.h  sv_bot.c  sv_bot.cpp  sv_ccmds.cpp  sv_client.cpp  sv_game.c  sv_game.cpp  sv_init.c  sv_init.cpp  sv_main.cpp  sv_net_chan.c  sv_net_chan.cpp  sv_snapshot.c  sv_snapshot.cpp  sv_world.c  sv_world.cpp
src-engine/shared/: cm_header.h
src-engine/sound/: snd_dma.cpp  snd_local.h  snd_mem.cpp  snd_mix.cpp  snd_public.h  snd_wavelet.cpp
src-engine/splines/: math_matrix.cpp  math_quaternion.h  math_vector.h  q_parse.cpp  q_shared.cpp  q_splineshared.h  splines.cpp  splines.h  util_str.cpp  util_str.h
src/botai/: ai_chat.c  ai_chat.h  ai_cmd.h  ai_dmnet.c  ai_dmq3.c  ai_dmq3.h  ai_main.h  ai_team.h  botai.h  chars.h  inv.h  match.h
src/botlib/: be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.h  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_main.c  be_aas_move.h  be_aas_optimize.c  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_routealt.h  be_aas_routetable.h  be_aas_sample.c  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ea.c  be_interface.c  be_interface.h  botlib.h  botlib.vcxproj  botlib.vcxproj.filters  l_crc.c  l_crc.h  l_libvar.c  l_libvar.h  l_log.c  l_memory.c  l_memory.h  l_precomp.c  l_script.c  l_script.h  (+2 more)
src/bspc/: aas_areamerging.h  aas_cfg.c  aas_create.c  aas_create.h  aas_edgemelting.c  aas_edgemelting.h  aas_facemerging.c  aas_file.h  aas_gsubdiv.c  aas_map.c  aas_prunenodes.c  aas_prunenodes.h  aas_store.c  aas_store.h  be_aas_bspc.c  brushbsp.c  bspc.c  bspc.vcxproj  bspc.vcxproj.filters  csg.c  faces.c  l_bsp_ent.h  l_bsp_hl.h  l_bsp_q1.c  l_bsp_q1.h  l_bsp_q3.c  l_bsp_q3.h  l_bsp_sin.c  l_cmd.c  l_cmd.h  l_log.c  l_math.h  l_mem.c  l_mem.h  l_poly.h  l_qfiles.c  l_qfiles.h  l_threads.c  map.c  map_hl.c  (+7 more)
src/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_effects.c  cg_event.c  cg_flamethrower.c  cg_local.h  cg_localents.c  cg_main.c  cg_newDraw.c  cg_particles.c  cg_players.c  cg_playerstate.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_sound.c  cg_syscalls.c  cg_trails.c  cg_view.c  cg_weapons.c  cgame.vcxproj  cgame.vcxproj.filters  tr_types.h
src/client/: cl_cgame.c  cl_cin.c  cl_input.c  cl_keys.c  cl_main.c  cl_scrn.c  cl_ui.c  client.h  snd_adpcm.c  snd_mix.c  snd_public.h  snd_wavelet.c
src/extractfuncs/: extractfuncs.c  (+11 more)
(+781 files in other folders)
